--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 PORT=3000
 # Database configuration
 MONGO_DB_URL=mongodb+srv://himanthagamachchige:o2tdc7IDcejePVbn@oshopcluster.nzlndjm.mongodb.net/?retryWrites=true&w=majority&appName=OshopCluster
+JWT_SECRET=OshopJWTToken
+REFRESH_TOKEN_SECRET=OshopRefreshToken
